# emarekatip

./: .gitignore  DOSYA_YAPISI.md  Makefile  README.md  anahtarlar.py  config.py  config.yaml  dashboard.py  deploy.json  emarekatip_hafiza.md  exceptions.py  main.py  pyproject.toml  scanner.py
.github/: copilot-instructions.md
analyzers/: __init__.py  diff_analyzer.py  project_analyzer.py
collectors/: __init__.py  git_collector.py
docs/: 01_GENEL_BAKIS.md  02_MIMARI.md  03_API_REFERANS.md  04_KULLANIM_KILAVUZU.md  05_GELISTIRICI_REHBERI.md
models/: __init__.py  project.py
reporters/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py
tests/: __init__.py  test_analyzer.py  test_diff.py  test_exceptions.py  test_models.py  test_reporters.py  test_scanner.py
